2009-08-10  Martin Maechler  <maechler@stat.math.ethz.ch>

	* DESCRIPTION (Version): 1.0-8

	* R/unix/Sys.ps.R (Sys.procinfo): produce unique names;
	important for multi-core/processor CPUs.

	* man/unix/Sys.cpuinfo.Rd: ditto

2009-07-16  Martin Maechler  <maechler@stat.math.ethz.ch>

	* man/uniqueL.Rd: link to Duplicated

2009-04-16  Martin Maechler  <maechler@stat.math.ethz.ch>

	* man/Duplicated.Rd: clarification

2009-01-10  Martin Maechler  <maechler@stat.math.ethz.ch>

	* DESCRIPTION (Version): 1.0-7 ready to release

2009-01-09  Martin Maechler  <maechler@stat.math.ethz.ch>

	* man/n.code.Rd: Rd_parse fixes
	* ...., man/u.log.Rd: ditto

2008-12-09  Martin Maechler  <maechler@stat.math.ethz.ch>

	* R/misc-goodies.R (digitsBase): allow integer-valued non-integers

2008-12-08  Martin Maechler  <maechler@stat.math.ethz.ch>

	* R/misc-goodies.R: get rid of more `x' like backquotes.

2008-11-25  Martin Maechler  <maechler@stat.math.ethz.ch>

	* DESCRIPTION (Version): 1.0-6 ready to release

	* R/prettylab.R (eaxis): change default to las = 1, "2" was a thinko!

2008-11-10  Martin Maechler  <maechler@stat.math.ethz.ch>

	* R/p.goodies.R (p.profileTraces): default 'subtitle' now includes formula

2008-11-08  Martin Maechler  <maechler@stat.math.ethz.ch>

	* NAMESPACE: export Sys.meminfo()

2008-10-31  Martin Maechler  <maechler@stat.math.ethz.ch>

	* DESCRIPTION (Version): 1.0-5 released to CRAN

	* R/Duplicated.R (Duplicated): new by Christoph Buser and MM
	* NAMESPACE, man/Duplicated.Rd

	* R/ellipse.R (ellipsePoints): add 'keep.ab.order' argument
	* man/ellipsePoints.Rd: allowing differ (a,b) from (b,a);
	thanks to a suggestion from Duncan Elkins

2008-10-23  Martin Maechler  <maechler@stat.math.ethz.ch>

	* R/prettylab.R (eaxis): add 'las = 2' (new default!) and "..."

2008-10-22  Martin Maechler  <maechler@stat.math.ethz.ch>

	* R/misc-goodies.R (boxplot.matrix): "moved" to R 2.9.0

2008-09-15  Martin Maechler  <maechler@stat.math.ethz.ch>
