@@ -1,6 +1,6 @@
 Package: sfsmisc
-Version: 1.0-8
-Date: 2009-08-10
+Version: 1.0-9
+Date: 2009-..-..
 Author: Martin Maechler and many others.
 Maintainer: Martin Maechler <maechler@stat.math.ethz.ch>
 Title: Utilities from Seminar fuer Statistik ETH Zurich
@@ -10,6 +10,6 @@ Depends: R (>= 2.5.0), stats, methods, utils
 Suggests: datasets, MASS, tcltk
 Encoding: latin1
 License: GPL (>= 2)
-Packaged: 2009-08-10 09:22:51 UTC; maechler
+Packaged: 2009-11-18 13:39:04 UTC; maechler
 Repository: CRAN
-Date/Publication: 2009-08-10 10:40:12
+Date/Publication: 2009-11-18 14:14:10
