@@ -1,3 +1,11 @@
+2009-11-18  Martin Maechler  <maechler@stat.math.ethz.ch>
+
+	* man/polyn.eval.Rd, man/p.ts.R, man/eaxis.Rd: fix \link{}s
+
+2009-10-07  Martin Maechler  <maechler@stat.math.ethz.ch>
+
+	* R/misc-goodies.R (lseq): check that 'from > 0'
+
 2009-08-10  Martin Maechler  <maechler@stat.math.ethz.ch>
 
 	* DESCRIPTION (Version): 1.0-8
